tests/errors/other/newline_error.s

.name "
































































































































"
			 

.comment "Hello, i'm Kroz new line"







	

  



l2:




sti	r1, %:live,%1




